tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_20.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 200;
               y := y;
               q := ((200 DIV ((+ 2) * (x DIV 1))) # (- y));
               r := (((~ (q & r)) OR ((0 DIV 1223) < 1)) & r);
               y := (x - 1223);
               z := 200;
  (* error *)  r := ((0 > x) & (1223 >= y));
               r := (1223 <= 0);
               x := 1223;
               r := (z # (((z + 2) - y) + 1))
END Test17.